feat:Type and Blur Effect in header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bibash Acharya Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/80732d36bd.js" crossorigin="anonymous"></script>
+    
 </head>
 <body>
     <header>
@@ -21,6 +22,16 @@
                 </li>
             </ul>
         </nav>
+        <div class="bg">
+            <section class="firstSection">
+                <div class="leftSection">
+                    Hi, it's <span class="purple">Bibash Acharya</span>
+                    <div>and I am a passionate</div>
+                    <span id="typewriter"></span>
+                </div>
+             </section>   
+        </div>
     </header>
+    <script src="script.js"></script>
 </body>
 </html>
