--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
              </section>   
         </div>
     </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <div class="about-content">
+            <figure>
+                <img src="skating.jpeg" alt="skating">
+                <figcaption><strong>One of my pics while skating</strong></figcaption>
+            </figure>
+            <div class="about-text">
+                <p>Hello once again I am Bibash Acharya - a local boy from Itahari, Nepal.I am a computer geek and love coding.I believe technology is something that should be accessible to all people throughout the world and I have been involved in several clubs to make this dream come true. My favorite techstack includes React, ASP.NET,Django and SQL Database. I have been involved in several leadership positiions ever since my childhood and school days.When not coding, you often find me playing gully cricket. Besides, I am a big fan of Harry Potter movies.</p>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
