fix:Centering text of Experience section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <h3>IT Intern</h3>
                         <h4>WorldLink Communications Nepal</h4>
                     </div>
-                    <img src="Worldlink.jpg" alt="WorldLink Communications Logo" class="exp-logo">
+                    <img src="Worldlink.png" alt="WorldLink Communications Logo" class="exp-logo">
                 </div> 
                 <p class="exp-desc">
                     My first college Internship
