--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="Worldlink.png" alt="WorldLink Communications Logo" class="exp-logo">
                 </div> 
                 <p class="exp-desc">
-                    My first college Internship
+                    <strong>My first college Internship</strong>
                 </p>
             </div>
     
@@ -72,7 +72,7 @@
                     <img src="LunarIT.png" alt="Lunar IT Logo" class="exp-logo">
                 </div> 
                 <p class="exp-desc">
-                    Internship on my favorite stack 
+                    <strong>Internship on my favorite stack </strong>
                 </p>
             </div>
 
@@ -85,7 +85,7 @@
                     <img src="Amnil.png" alt="Amnil Logo" class="exp-logo">
                 </div> 
                 <p class="exp-desc">
-                    Currently Working
+                    <strong>Currently Working</strong>    
                 </p>
             </div>
     
