feat:personal milestones and projects section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,32 @@
         
     </section>
 
+    <section id="milestones-projects">
+        <h2>Personal Milestones</h2>
+        <div class="milestones-card">
+            <h3>PCA Image Processing Workshop</h3>
+            <p>Hands-on workshop exploring Principal Component Analysis for Image Processing</p>
+        </div>
+
+        <h2 class="projects-title">Projects</h2>
+        <div class="projects-row">
+            <div class="project-card">
+                <h3>Karate Dojo Site</h3>
+                <p>Responsive website for a local karate dojo, instructor profiles, and sign forms.</p>
+            </div>
+
+            <div class="project-card">
+                <h3>Asset Management System</h3>
+                <p>Internal web app for managing company assets, built at Lunar IT Solutions</p>
+            </div>
+
+            <div class="project-card">
+                <h3>PCA Image Analyis</h3>
+                <p>Tool to analyze and visualize image datasets using PCA with interactive plots and filters</p>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
