feat:Consistent project card

--- a/index.html
+++ b/index.html
@@ -106,18 +106,28 @@
         <h2 class="projects-title">Projects</h2>
         <div class="projects-row">
             <div class="project-card">
-                <h3>Karate Dojo Site</h3>
-                <p>Responsive website for a local karate dojo, instructor profiles, and sign forms.</p>
+                <div class="project-content">
+                    <h3>Karate Dojo Site</h3>
+                    <p>Responsive website for a local karate dojo, instructor profiles, and sign forms.</p>
+                    <a href="https://github.com/bibashmanjusubedi/karatedojosite" class="project-link"><i class="fa-brands fa-github"></i></a>
+                </div>
             </div>
 
             <div class="project-card">
-                <h3>Asset Management System</h3>
-                <p>Internal web app for managing company assets, built at Lunar IT Solutions</p>
+                <div class="project-content">
+                    <h3>Asset Management System</h3>
+                    <p>Internal web app for managing company assets, built at Lunar IT Solutions</p>
+                    <a href="https://github.com/bibashmanjusubedi/Internship" class="project-link"><i class="fa-brands fa-github"></i></a>
+                </div>
             </div>
 
             <div class="project-card">
-                <h3>PCA Image Analyis</h3>
-                <p>Tool to analyze and visualize image datasets using PCA with interactive plots and filters</p>
+                <div class="project-content">
+                    <h3>PCA Image Analyis</h3>
+                    <p>Tool to analyze and visualize image datasets using PCA with interactive plots and filters</p>
+                    <a href="https://github.com/bibashmanjusubedi/MCSC202-PCA-" class="project-link"><i class="fa-brands fa-github"></i></a>
+                </div>
+                
             </div>
         </div>
     </section>
