--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <ul>
                 <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
                 <li><a href="#about"><i class="fa-solid fa-user"></i>About Me</a></li>
-                <li><a href="#"><i class="fa-solid fa-grip"></i>Portfolio</a></li>
-                <li><a href="#"><i class="fa-solid fa-envelope"></i>Contact</a></li>
+                <li><a href="#portfolio"><i class="fa-solid fa-grip"></i>Portfolio</a></li>
+                <li><a href="#contact"><i class="fa-solid fa-envelope"></i>Contact</a></li>
                 <li class="right">
                     <i class="fa-solid fa-moon"></i>
                 </li>
@@ -173,6 +173,45 @@
         </div>
     </section>
        
+
+    <footer id="contact">
+        <div class="footer-main" aria-label="Site-footer">
+            <div class="footer-column">
+                <h2>Contact</h2>
+                <p>Itahari, Koshi Province, Nepal</p>
+                <p>Email: <a href="mailto:acharyabibash1@gmail.com">acharyabibash1@gmail.com</a></p>
+
+            </div>
+
+            <div class="footer-column">
+                <h2>Quick Links</h2>
+                <ul>
+                  <li><a id="portfolio">My CV</a></li>
+                </ul>
+            </div>
+
+
+            <div class="footer-column">
+                <h2>Follow Me</h2>
+                <p>Connect with me on these platforms.</p>
+                <div class="footer-socials">
+                  <a href="https://github.com/bibashmanjusubedi" target="_blank" rel="noopener" aria-label="GitHub profile">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                  
+                  <a href="https://www.linkedin.com/in/bibash-acharya-30a046194/" target="_blank" rel="noopener" aria-label="LinkedIn profile">
+                    <i class="fa-brands fa-linkedin"></i>
+                  </a>
+                </div>
+              </div>
+
+              <div class="footer-bottom">
+                <p>&copy; 2025 Bibash Acharya. All rights reserved.</p>
+              </div>
+
+            </div>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
